BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Test_Script_vod__c.object
<CustomObject>
    <description>PMO Tool Kit - used to capture testing results for aligned Test Plans and Requirements</description>
    <fields>
        <fullName>Action_vod__c</fullName>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual_Result_vod__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Defect_Summary_vod__c</fullName>
        <label>Defect Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Result_vod__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Case_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Testing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Project</label>
        <referenceTo>Project_vod__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Testing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Test_Plan_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Test Plan</label>
        <referenceTo>Test_Plan_vod__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requirements_Verified_vod__c</fullName>
        <label>Requirements Verified</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Simulated_Date_vod__c</fullName>
        <label>Simulated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Script_Description_vod__c</fullName>
        <label>Test Script Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tester_Name_vod__c</fullName>
        <label>Tester Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Test Script</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Test Script</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>